--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "statsmodels>=0.14.5",
     "torch>=2.9.0",
     "tqdm>=4.67.1",
+    "webdataset>=1.0.2",
     "xgboost>=3.1.0",
 ]
 
