--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,20 @@ authors = [
 requires-python = ">=3.12,<3.13"
 dependencies = [
     "aiomoex>=2.1.2",
+    "altair>=6.0.0",
     "ipykernel>=7.0.1",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "polars>=1.36.1",
     "pyarrow>=22.0.0",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.5",
     "tqdm>=4.67.1",
+    "vegafusion>=2.0.3",
+    "vl-convert-python>=1.9.0",
     "webdataset>=1.0.2",
     "xgboost>=3.1.0",
 ]
